parcel.js integrated

--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
 SERVER_PORT=8000
 
-DB=mongodb+srv://lucent:<password>@cluster0.7zyhseu.mongodb.net/Tour?retryWrites=true&w=majority
+DB=mongodb+srv://lucent:<password>@cluster0.7zyhseu.mongodb.net/zTour?retryWrites=true&w=majority
 DB_LOCAL=mongodb://127.0.0.1:27017/tour
 DB_PASSWORD=fh57xTuCslAaeouG
 
