--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
 	"name": "natours",
 	"version": "1.0.0",
-	"description": "",
-	"source": "./public/js/index.js",
-	"main": "./public/js/main.js",
-	"module": "./public/js/module.js",
+	"source": "public/js/index.js",
+	"browserslist": "> 0.5%, last 2 versions, not dead",
+	"targets": {
+		"default": {
+			"distDir": "public"
+		}
+	},
 	"scripts": {
 		"start": "nodemon server.js",
 		"start:prod": "SET NODE_ENV=production && node server.js",
 		"debug": "ndb server.js",
-		"watch:js": "parcel watch ./public/js/index.js",
 		"build:js": "parcel build"
 	},
 	"author": "Lucent Rai",
@@ -30,13 +32,12 @@
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.9.1",
 		"pug": "^3.0.2",
-		"regenerator-runtime": "^0.13.11",
 		"slugify": "^1.6.5",
 		"validator": "^13.9.0",
 		"xss-clean": "^0.1.1"
 	},
 	"devDependencies": {
-		"parcel": "^2.8.3",
+		"parcel": "^2.9.2",
 		"process": "^0.11.10"
 	}
 }
