email config added

--- a/config.env
+++ b/config.env
@@ -12,5 +12,7 @@ JWT_EXPIRATION_JS=90
 EMAIL_USERNAME=9c35cdf6b45268
 EMAIL_PASSWORD=b7b11279795e49
 EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_FROM=rai@lucent.com.np
 
 URL=
