--- a/config.env
+++ b/config.env
@@ -13,7 +13,7 @@ EMAIL_USERNAME=9c35cdf6b45268
 EMAIL_PASSWORD=b7b11279795e49
 EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=2525
-EMAIL_FROM=natours@gmail.com
+EMAIL_FROM=lucentthulung@gmail.com
 
 SENDGRID_USERNAME=apikey
 SENDGRID_PASSWORD=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
