parcel development config

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"start": "nodemon server.js",
 		"start:prod": "SET NODE_ENV=production& node server.js",
 		"debug": "ndb server.js",
+		"watch:js": "parcel --dist-dir public",
 		"build:js": "parcel build"
 	},
 	"author": "Lucent Rai",
