--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		}
 	},
 	"scripts": {
-		"start": "nodemon server.js",
+		"start": "node server.js",
+		"dev": "nodemon server.js",
 		"start:prod": "SET NODE_ENV=production& node server.js",
 		"debug": "ndb server.js",
 		"watch:js": "parcel --dist-dir public",
@@ -45,5 +46,9 @@
 	"devDependencies": {
 		"parcel": "^2.9.2",
 		"process": "^0.11.10"
+	},
+	"engines": {
+		"node": ">=12.0.0",
+		"npm": ">=6.0.0"
 	}
 }
